# boingus

./: BoingusConfig.cmake.in  CMakeLists.txt  README.md
colors/: Boingus.colors  BoingusDark.colors  BoingusHighContrast.colors  BoingusLight.colors  CMakeLists.txt
cursors/Breeze/: build.sh  clean_svg
cursors/Breeze/Breeze/cursors_scalable/: cross.cursor  crossed_circle.cursor  dnd-copy.cursor  forbidden.cursor  grab.cursor  grabbing.cursor  h_double_arrow.cursor  half-busy.cursor  left_ptr.cursor  nesw-resize.cursor  ns-resize.cursor  plus.cursor  question_arrow.cursor  se-resize.cursor  size_all.cursor  split_h.cursor  split_v.cursor  watch.cursor  xterm.cursor
cursors/Breeze_Light/: clean_svg
kdecoration/: CMakeLists.txt  Messages.sh  boingus.h  boingus.json  boingusbutton.cpp  boingusbutton.h  boingusdecoration.cpp  boingusdecoration.h  boingusexceptionlist.cpp  boingusexceptionlist.h  boingussettings.kcfgc  boingussettingsdata.kcfg  boingussettingsprovider.cpp  boingussettingsprovider.h  boingussizegrip.cpp  boingussizegrip.h  config-boingus.h.cmake
kdecoration/config/: boingusconfigwidget.cpp  boingusconfigwidget.h  boingusdecorationconfig.desktop  boingusdetectwidget.cpp  boingusdetectwidget.h  boingusexceptiondialog.cpp  boingusexceptiondialog.h  boingusexceptionlistwidget.cpp  boingusexceptionlistwidget.h  boingusexceptionmodel.cpp  boingusexceptionmodel.h  boingusitemmodel.cpp  boingusitemmodel.h  boinguslistmodel.h
kdecoration/config/ui/: boingusconfigurationui.ui  boingusdetectwidget.ui  boingusexceptiondialog.ui  boingusexceptionlistwidget.ui
kstyle/: CMakeLists.txt  boingus.h  boingus.json  boingus.kcfg  boingus.themerc  boingusaddeventfilter.cpp  boingusaddeventfilter.h  boingusblurhelper.cpp  boingusblurhelper.h  boingusframeshadow.cpp  boingusframeshadow.h  boingushelper.cpp  boingushelper.h  boingusmdiwindowshadow.cpp  boingusmdiwindowshadow.h  boingusmetrics.h  boingusmnemonics.cpp  boingusmnemonics.h  boinguspropertynames.cpp  boinguspropertynames.h  boingusshadowhelper.cpp  boingusshadowhelper.h  boingussplitterproxy.cpp  boingussplitterproxy.h  boingusstyle.cpp  boingusstyle.h  boingusstyleconfigdata.kcfgc  boingusstyleplugin.cpp  boingusstyleplugin.h  boingustileset.cpp  boingustileset.h  boingustoolsareamanager.cpp  boingustoolsareamanager.h  boinguswindowmanager.cpp  boinguswindowmanager.h  breezestyle.cpp  config-boingus.h.cmake
kstyle/animations/: boingusanimation.cpp  boingusanimation.h  boingusanimationdata.cpp  boingusanimationdata.h  boingusanimations.cpp  boingusanimations.h  boingusbaseengine.cpp  boingusbaseengine.h  boingusbusyindicatordata.cpp  boingusbusyindicatordata.h  boingusbusyindicatorengine.cpp  boingusbusyindicatorengine.h  boingusdatamap.h  boingusdialdata.cpp  boingusdialdata.h  boingusdialengine.cpp  boingusdialengine.h  boingusenabledata.cpp  boingusenabledata.h  boingusgenericdata.cpp  boingusgenericdata.h  boingusheaderviewdata.cpp  boingusheaderviewdata.h  boingusheaderviewengine.cpp  boingusheaderviewengine.h  boingusscrollbardata.cpp  boingusscrollbardata.h  boingusscrollbarengine.cpp  boingusscrollbarengine.h  boingusspinboxdata.cpp  boingusspinboxdata.h  boingusspinboxengine.cpp  boingusspinboxengine.h  boingusstackedwidgetdata.cpp  boingusstackedwidgetdata.h  boingusstackedwidgetengine.cpp  boingusstackedwidgetengine.h  boingustabbardata.cpp  boingustabbardata.h  boingustabbarengine.cpp  (+11 more)
kstyle/config/: CMakeLists.txt  Messages.sh  boingusstyleconfig.cpp  boingusstyleconfig.desktop  boingusstyleconfig.h  boingusstyleconfigmodule.cpp  boingusstyleconfigmodule.h  main.cpp
kstyle/config/ui/: boingusstyleconfig.ui
kstyle/debug/: boinguswidgetexplorer.cpp  boinguswidgetexplorer.h
libboinguscommon/: CMakeLists.txt  boingusboxshadowrenderer.cpp  boingusboxshadowrenderer.h
misc/: CMakeLists.txt
misc/boingustoboinguslight/: CMakeLists.txt  boingustoboinguslight.upd  main.cpp
misc/kde4boingus/src/: CMakeLists.txt  Messages.sh  kde4boingus.upd  main.cpp
misc/qtcurvepreset/: CMakeLists.txt
