install(FILES Boingus.colors
        DESTINATION ${KDE_INSTALL_DATADIR}/color-schemes/)
install(FILES BoingusDark.colors
        DESTINATION ${KDE_INSTALL_DATADIR}/color-schemes/)
install(FILES BoingusHighContrast.colors
        DESTINATION ${KDE_INSTALL_DATADIR}/color-schemes/)
install(FILES BoingusLight.colors
        DESTINATION ${KDE_INSTALL_DATADIR}/color-schemes/)
